@@ -3,6 +3,8 @@
         * plotpriv.tcl:  Added routines for radial chart
         * plotchart.man: Description of radial chart
         * plotchart.test: Test for such charts
+        * plotdemos4.tcl: New set of demos - 3D bars and radial charts
+        * plotdemos5.tcl: New set of demos - contour plots
 
 2007-04-29 Arjen Markus  <arjenmarkus@users.sourceforge.net>
         * plotchart.tcl: Added balloon text
